// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests sobre gifgrid debe crearse el componente 1`] = `
<Fragment>
  <h3
    className="animate__fadeIn"
  >
     
    slayer
     
  </h3>
  cargando
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`tests sobre gifgrid debe de mostrar items cuando se llama el hook 1`] = `
<Fragment>
  <h3
    className="animate__fadeIn"
  >
     
    slayer
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id={123}
      key="123"
      title="aly"
      url="https://mock/jj.png"
    />
    <GifGridItem
      id={125}
      key="125"
      title="alya"
      url="https://mock/jl.png"
    />
  </div>
</Fragment>
`;
